<resources>


    <array name="MenuPhotoUncomplete">
        <item>@string/find_device</item>
        <item>@string/create_new_control</item>
    </array>
    <array name="MenuPhoto">
        <item>@string/find_device</item>
        <item>@string/set_control</item>
    </array>


    <string name="find_device">Najít zařízení</string>
    <string name="set_control">Nastavit ovládání</string>

    <string name="app_name">BlueTooth Terminal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="buttonInformation">"
Nástroj tlačítko funguje jako standartní tlačítko, které při stisknutí odešle jemu přidělený bajt. Ten lze nastavit v kolonce "Bajt" a to buď napsáním jednoho znaku, který bude převeden na bajtovou hodnotu podle tabulky ASCI, HEX (zadáním dvoumístného čisla. např: 0F), nebo napsáním přímo bajtové hodnoty.

V kolonce "text" lze nastavit text, který bude napsán na tlačítku (max. 12 znaků).

Zbývající dvě položky "barva textu" a "barva pozadí" slouží k nastavení barevnosti tlačítka."
    </string>
    <string name="switchInformation">"
        Přepínač má dvě pozice, do kterých může být nastaven. Vypnuto (výchozí pozice) a zapnuto, tyto pozice lze přepínat v ovládacím rozhraní. Přepínač je ideální například pro rozsvícení světla, majáku atd.
        Do kolonky vypnuto napište bajt, který bude odeslán při přepnutí přepínače do pozice vypnuto.
        Do kolonky zapnuto napište bajt, který bude odeslán při přepnutí přepínače do pozice zapnuto.
        Všechny bajty zadávejte buď napsáním jednoho znaku, který bude převeden na bajtovou hodnotu podle tabulky ASCI, HEX (zadáním dvoumístného čisla. např: 0F), nebo napsáním přímo bajtové hodnoty. např: 0010 1010."</string>
    <string name="seekBarInformation">"
        Posuvník odesíla číselné hodnoty od nuly do jeho maximální hodnoty, podle jeho polohy na ose. Nula je vlevo a maximální hodnota v pravo, tudíž čím více je posuvník posunutý doprava tím vetší hodnoty odesílá ale nikdy nelze určit jaké hodnoty bude přesně posílat. Posuvník je ideální například na ovládání svítivosti nebo RGB modelu (nastavení maximální hodnoty na 255).
        Maximální hodnota označuje číselnou (Dekadickou) hodnotu která bude odeslána při posunutí posuvníku na nejvyšší hodnotu. Tato hodnota může být nastavena jen v celých číslech."
    </string>
    <string name="poznamkyInformation">"
        Poznámka funguje jako textové pole, popisující jednotolivé části ovládání, které nemohou být popsány. Může být umístěna kdekoliv, nijak nereaguje na ostatní prvky v ovládání a není určena k jakékoliv interakci s uživatelem.
        Do položky Text poznámky napište text který bude poznámka zobrazovat.
        V ostatních kolonkách nastavení poznámky lze nastavit velikot zobrazovaného textu, jeho barva a pozadí."
    </string>
    <string name="plynInfomation">"
        Plyn je nástroj, který posílá bajtové hodnoty podle toho, na jaké z jeho poloh je držen prst. V nastavení lze nastavit počet poloh plynu od 2 do 5 (přičemž je jedna poloha vždy výchozí) a přidělit každé poloze její určitou bajtovou hodnotu, kterou nástroj odešle, při držění prstu na ní. Když je zaplá animace vracení, tak po uvolnění prstu z plynu, se prvek sám vrátí do výchozí polohy (stejně, jako když se pustí plynový pedál v autě). Pokud je animace vracení vypnutá zůstane ve stejném stavu. Když se prst přesune přes hranici jedné polohy na jinou polohu, nástroj bude dále posílat bajtovou hodnotu polohy, na kterou se prst přesunul. V případě že je nastaveno nepřetržité odesílání, bude tento bajt posílán stále dokola, dokud neni překročena další hranice. A proto je ideální pro postupné přídávání výkonu například pro ovládání rychlosti autíčka.
        Podle nastavení počtu poloh se buď zobrazí nebo zmízí textová pole, do kterých se nastavují bajtové hodnoty pro dané polohy. Všechny bajty zadávejte buď jako jeden znak, který bude převeden pomoci ASCI tabulky, HEX (zadáním dvoumístného čisla. např: 0F), a nebu rovnou bytovou hodnotu např: 0010 1010.
        Barva posunu nastaví barvu indikace pozice, kde se nachází hodnota plynu (viz obrázek), barva pozadí nastavuje pozadí plynu a barva hranic nastavuje barvu všech hranic mezi polohami.
        Následující obrázek je popis s nastavením pro 4 polohy."
    </string>
    <string name="volantInformation">"
        Volant je nástroj, který se otačí kolem své osy, a to za místem kde se nachází prst.
        Rovná pozice je pozice ve které se volant nachází když s ním není zacházeno. Pokud je volant na této pozici potom odesílá bajt který byl nastaven do pole Rovná pozice.
        Volant se sám vrací po polohy "rovná pozice" po té co z něj uživatel pustí prst a pokud je zapnutá animace vracení. V opačném případě se s ním nic neděje.
        Dále lze nastavit počet poloh pro natočení volantu. Podle nastavení počtu poloh, zmizí nebo se objeví jednotolivá textová pole a volant se rozdělý na oblasti (viz obrázek). Pokud je volant natočen do jedné z těchto poloh tak posílá bajt který byl pro onu polohu nastaven. Pokud je nastaveno nepřetržité posílání, nástroj posíla tento bajt stále dokola dokud poloha není změněna.
        Jesltiže je nastaven počet poloh na 3, potom bude rozvžení oblastí vypadat stejně jako na obrázku. Když nastavíme počet oblastí na 2, tak se oblast dvě roztáhne přes oblast 3 a po nastavení počtu oblastí na 1 se oblast jedna roztáhne přes zbylé dvě. Při nastavení pouze jedné polohy volant posílá informace pouze o tom, na kterou stranu je natočen ale ne informaci o kolik stupňů.
        Všechny bajty zadávejte buď jako jeden znak, který bude převeden pomocí ASCI tabulky, HEX (zadáním dvoumístného čisla. např: 0F), a nebo rovnou bytovou hodnotu např: 0010 1010.
        Následující obrázek je s nastavením Počet oblastí 3.
        "</string>


    <string name="outcoming_bytes">Odchozí bajty</string>
    <string name="incoming_bytes">Příchozí bajty (neumí zobrazit 0)</string>
    <string name="search_device">Hledám zařizeni</string>
    <string name="save">Uložit</string>
    <string name="button_text">Text tlačítka:</string>
    <string name="text_color">Barva textu:</string>
    <string name="background_color">Barva pozadí:</string>
    <string name="byteString">Bajt:</string>
    <string name="number_of_leves">Počet úrovní:</string>
    <string name="level0">0. úroveň:</string>
    <string name="level1">1. úroveň:</string>
    <string name="level2">2. úroveň:</string>
    <string name="level3">3. úroveň:</string>
    <string name="level4">4. úroveň:</string>
    <string name="level5">5. úroveň:</string>
    <string name="boreder_color">Barva hranic:</string>
    <string name="color_of_move">Barva posunu:</string>
    <string name="send_after_change">Posílat při změně</string>
    <string name="send_allways">Posílat nepřetržitě</string>
    <string name="switch_on_returning_animation">Zapnout animaci vracení</string>
    <string name="switch_off_returning_animation">Vypnout animaci vraceni</string>
    <string name="max_value">Maximální hodnota:</string>
    <string name="text_of_note">Text poznámky:</string>
    <string name="text_size">Velikost textu:</string>
    <string name="value_for_off">Hodnota pro vypnuto.</string>
    <string name="value_for_on">Hodnota pro zapnuto.</string>
    <string name="left">Vlevo</string>
    <string name="right">Vpravo</string>
    <string name="ahead">Rovně</string>
    <string name="connecting_to">Připojování k</string>
    <string name="waiting_please">Čekejte prosím!</string>
    <string name="clear">Vyčistit</string>
    <string name="options">Option</string>
    <string name="information">Informace</string>
    <string name="starting_bluetooth">Zapinam Bluetooth</string>
    <string name="bluetooth_not_found">BlueTooth nenalezeno</string>
    <string name="deleted">Smazáno</string>
    <string name="create_new_control">Vytvořit nové ovládání</string>
    <string name="this_name_is_not_allowed">Tento název, nemůžete zadat</string>
    <string name="waring">Varování</string>
    <string name="would_you_like_end_app">Přejte si ukončit aplikaci?</string>
    <string name="no">Ne</string>
    <string name="yes">Ano</string>
    <string name="device_cant_be_connect_try_later">Zařízení nebylo připojeno, zkuste to znovu.</string>
    <string name="choose_device">Vyberte zařízení</string>
    <string name="bad_value">Špatně zadáná hodnota</string>
    <string name="button_doesnt_has_any_value">Pro tlačítko nebyla nastavena hodnota.</string>
    <string name="cancel">Zrušit</string>
    <string name="choose_control">Zvolte ovládání:</string>
    <string name="would_you_like_remove_control">Opravdu si přejete ovládání %s odstranit?</string>
    <string name="you_have_to_set_control">Musíte nastavit olvdání.</string>
    <string name="put_control_name">Zadejte název ovládání:</string>
    <string name="you_have_put_banned_word">Zadali jste zakázaný znak ( ; ).</string>
    <string name="you_have_to_put_just_one_word">Můsíte zadat pouze jedno slovo.</string>
    <string name="this_control_already_exist">Takto už se jedno ovládání jmenuje.</string>
    <string name="you_did_not_choose_any_control">Nezvolili jste žádné ovládání.</string>
    <string name="one_value_has_not_been_set">Jedna z hodnot nebyla nastavena.</string>
    <string name="set_name">Nastavte jméno</string>
    <string name="data_has_not_been_saved">Nepodařilo se uložit data.</string>
    <string name="button">Tlačítko</string>
    <string name="switchString">Přepínač</string>
    <string name="seek_bar">Posuvník</string>
    <string name="note">Poznámku</string>
    <string name="accelerator">Plyn</string>
    <string name="steering_wheel">Volant</string>
    <string name="info_for">Informace pro %s</string>
    <string name="setting_for_button">Nastavení pro Tlačítko</string>
    <string name="would_you_like_continue_without_save">Opravdu chcete pokračovate bez uložení?</string>
    <string name="one_value_has_incorect_setting">Jedna z hodnot nebyla dobře nastavena.</string>
    <string name="setting_for_power">Nastavení pro Plyn</string>
    <string name="setting_for_seekbar">Nastavení pro Posuvník</string>
    <string name="have_to_set_value_large_then_zero">Musíte nastavid hodnotu vetši než nula.</string>
    <string name="you_have_to_set_some_value">Musíte nastavid nějakou hodnotu.</string>
    <string name="setting_for_note">Nastavení pro Poznámku</string>
    <string name="setting_for_switch">Nastavení pro Přepínač</string>
    <string name="setting_for_steering_wheel">Nastavení pro Volant</string>
    <string name="would_you_like_save_changes">Přejete se uložit změny?</string>
    <string name="you_cannot_add_more_theese_items">Bohužel víc těchto prvků už přidat nemůžete.</string>
    <string name="blouetooth_has_been_disabled">Bluetooth bylo vypnuto</string>
    <string name="console">Konzole</string>
    <string name="there_is_no_more_controls">Nejsou k dispozici žádné další ovládání.</string>
    <string name="would_you_like_dissconect_device">Přejte si se odpojit od zařízení?</string>
    <string name="Device_has_been_disconected">Zařízení bylo odpojeno</string>
    <string name="Device_has_not_been_disconected">Zařízení se nepodařilo odpojit.</string>
    <string name="control">Ovládání</string>
    <string name="disconect">Odpojit</string>
    <string name="connected_to">Připojeno k: %s</string>
</resources>